--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="rufus.ico">
+  <meta name="description" content="my resume">
+  <meta name="author" content="862304558">
 
-  <title>John Doe - Business Administration</title>
+  <title>Ryan Bruce - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,13 +27,13 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Ryan Bruce</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ryanbruce.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">Ryan Bruce</span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
-        </h1>
+        <h1 class="mb-3">
+        </h1> Ryan Bruce
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Job: Student</div>
+        <p class="lead mb-4">I have had an internship at Target in the marketing divison. My amazing work single handedly made the sales of toilet paper go up by 20 times. Avertising Target as the only place to get your toilet paper reserves during a pandemic was a genius move.<br><br>
 
-        Enter bio here<br><br>
+        I also worked at Amazon in a low level position in marketing and got promoted to the lead marketing team. This was due to my amazing success at Target so when Amazon poached me and offered me a paying salary I had to take it.<br><br>
 
-        Enter bio here
+        Then I was offered a deal for Walmart to help reshape their image due to most people associating them with low-quality products and merchanise so I came in and single-handedly saved from bankruptcy.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://degreeworks.ucr.edu/dashboard/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://icoconvert.com/">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://jordanschuetz.github.io/LearnCS8-Resume/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://ilearn.ucr.edu/bbcswebdav/pid-4483330-dt-content-rid-50628871_1/courses/BUS_010_001_22W/Team%20Project.pptx">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +93,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Hacker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mycompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
+              • Hacked competitors for company X<br> 
               • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Experience with HTML, CSS, Javascript, and Safari<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2005 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Best Cashier</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://target.com">Target</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Hung out with the customers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">April 2019 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Busser at Country Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.gamestop.com/video-games/playstation-4?isSearchParam=true&start=719&sz=24">El Niguel Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Got tortured by my boss<br>
+            • Single handedly carried the entire club<br>
+            • Was an amazing employee<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2020 - July 2021</span>
           </div>
         </div>
 
@@ -151,34 +149,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Dana Hills</h3>
+            <div class="subheading mb-3">High School</div>
+            <div>Graduated</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary"> 2016-2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Niguel Hills</h3>
+            <div class="subheading mb-3">Middle School</div>
+            <div>Graduated</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">2014-2016</span>
           </div>
         </div>
 
@@ -191,7 +178,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="RUFUS.jpeg" width="500px"><br>
+            <img src="iphone.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +189,8 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Ryan Bruce
+  </center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
